# iot-automator

./: .gitignore  .readthedocs.yml  README.md  README.rst  homebridge.py  iot-automator.code-workspace  poetry.toml  pyproject.toml  requirments.txt  setup_env.ps1  setup_env.sh  setup_steps_remove_later.txt
.github/workflows/: linter.yml  tests.yml
docs/: Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/about/: contributing.rst  index.rst  license.rst
docs/source/: .readthedocs.yml  changelog.rst  cheatsheet.rst  conf.py  design.rst  index.rst  intro.rst  license.rst  limitations.rst  requirements.txt  security.rst
docs/source/_examples/: basic_start.py
docs/source/about/: index.rst
docs/source/api/: actuate.rst  device.rst  events.rst  index.rst  sense.rst  types.rst
docs/source/developer_docs/: index.rst  tools.rst
docs/source/supported_hubs/: alexa.rst  google_home.rst  home_assistant.rst  index.rst  openhab.rst  smartthings.rst  webthings.rst
docs/source/topic_overview/: device_connection.rst  index.rst  node_architecture.rst  system_overview.rst
docs/source/tutorials/: index.rst  machine_learning_automation.rst  multi_node_automation.rst  signal_based_automation.rst
docs/source/user_guide/: device_events.rst  index.rst  multi_node.rst  signal_functions.rst  system_security.rst
docs/topic_overview/: cloud_administrator.rst  index.rst  module_deployment.rst  node_architecture.rst  system_overview.rst
docs/user_guide/: device_actuate.rst  device_sense.rst  device_state.rst  multi_user.rst  node_connection.rst
internal_docs/source/: conf.py  index.rst  tools.rst
internal_docs/source/_static/: custom.css
internal_docs/source/howtodocs/: external_docs.rst  index.rst  prog_stands.rst
src/_IHub/: _IHub.py  __init__.py
src/_IHub/_IDevice/: _IDevice.py  __init__.py
src/scratch/TestImports/: __main__.py
src/test_files/: test_lint_docs.py  test_random.py
tmp/source/: conf.py  index.rst
(+6 files in other folders)
